# cpplox

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  LICENSE  README.md  TODO.md  WORKSPACE  meson.build
cpplox/: BUILD  TestMain.cpp  main.cpp
cpplox/AST/: BUILD  Expr.cpp  Expr.h  ExprTest.cpp  NodeTypes.cpp  NodeTypes.h  NodeTypesTest.cpp  PrettyPrinter.cpp  PrettyPrinter.h  PrettyPrinterRPN.cpp  PrettyPrinterTest.cpp  Stmt.cpp  Stmt.h
cpplox/ErrorsAndDebug/: BUILD  DebugPrint.cpp  DebugPrint.h  ErrorReporter.cpp  ErrorReporter.h  RuntimeError.cpp  RuntimeError.h
cpplox/Evaluator/: BUILD  Environment.cpp  Environment.h  Evaluator.cpp  Evaluator.h  ExprEvaluator.cpp  ExprEvaluator.h  Objects.cpp  Objects.h  StmtExprEvaluator.cpp  StmtExprEvaluator.h
cpplox/InterpreterDriver/: BUILD  InterpreterDriver.cpp  InterpreterDriver.h  InterpreterDriverTest.cpp
cpplox/Parser/: BUILD  Parser.cpp  Parser.h
cpplox/Scanner/: BUILD  Scanner.cpp  Scanner.h  ScannerTest.cpp
cpplox/Types/: BUILD  Literal.cpp  Literal.h  Token.cpp  Token.h  Uncopyable.h  Value.cpp  Value.h
cpplox/include/: TreewalkInterpreter.h
cpplox/src/: ErrorReporter.cpp  ErrorReporter.h  Scanner.cpp  Scanner.h  StatusCodes.h  Token.cpp  Token.h  TreewalkInterpreter.cpp
cpplox/src/Types/: Expr.h  (+2 more)
cpplox/unittest/: empty.lox  unimplementedTest.cpp
lox-tests/comments/: block_comment.lox  nested_block_comment.lox
sample-lox-programs/: BUILD  fib_small.lox  functor.lox
sample-lox-programs/class/: egotist.lox
sample-lox-programs/inheritance/: three-class-super.lox
src/: main.cpp  meson.build
(+2 files in other folders)
